[package]
name = "oc-metrics-resampler"
version = "0.1.0"
authors = ["Your Name <over.codes@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7.0"
tonic-reflection = "0.1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.8.3"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.4"